# crawlers

./: .gitignore  .gitlint  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  how_to_question.md
.github/workflows/: container.yml  gitlint.yml  lint.yml
docker/: entrypoint.sh
exam/: items.py  middlewares.py  pipelines.py  settings.py
exam/spiders/: agathaedu.py
