[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exam"
description = "Obtem questões para os vestibulares/enem"
readme = { "file" = "README.md", "content-type" = "text/markdown" }
requires-python = ">=3.10"
license = "GPL-3.0-only"
keywords = ["python", "exam", "scrapy", "crawlers", "enem"]
authors = [{ name = "Igor Matos", email = "igor.matos@ish.com.br" }]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Framework :: Scrapy",
]
dependencies = ["scrapy>=2.8.0,<3.0.0"]

[project.optional-dependencies]
dev = ["ipython>=8.12.0,<9.0.0", "ipdb>=0.13.13,<1.0.0"]

dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Academia-de-Dados/crawlers#readme"
Issues = "https://github.com/Academia-de-Dados/crawlers/issues"
Source = "https://github.com/Academia-de-Dados/crawlers"

[tool.hatch.version]
path = "exam/__about__.py"
